--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,15 @@
   width: 100%;
 }
 
-.app-header {
-  padding: 1rem;
-  border-bottom: 1px solid #30363d;
+h2 {
+  text-align: center;
+    font-family: "JetBrains Mono", monospace;
+}
+.app-header{
+  text-align: center;
+  font-family: "JetBrains Mono", monospace;
+  font-size: 12px;
+  border-bottom: 3px solid #30363d;
 }
 
 .split-view {
@@ -33,6 +39,9 @@
 
 .panel-left {
   border-right: 1px solid #30363d;
+  display: flex;
+  flex-direction: column;
+  height: auto;
 }
 
 .panel-right {
@@ -41,24 +50,30 @@
 }
 
 .code-viewer {
+  display: flex;
+  flex-direction: column;
   background-color: #161b22;
   border-radius: 6px;
-  overflow: auto;
+  overflow : hidden;
+  height : auto;
   font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, monospace;
-  font-size: 14px;
-  line-height: 1.5;
+  font-size: 18px;
+  line-height: 1;
 }
 
 .visualization {
   flex: 1;
   display: flex;
   flex-direction: column;
+  border: 1px solid #30363d;
+  border-radius: 6px;
+  padding: 1rem;
 }
 
 .controls {
   margin-bottom: 1rem;
   display: flex;
-  gap: 0.5rem;
+  gap: 0.5rem ;
   flex-wrap: wrap;
 }
 
@@ -193,4 +208,10 @@ input {
 
 .diy-section button:hover {
   background-color: #2ea043;
+}
+.placeholder {
+  font-size: 1.2rem;
+  color: #8b949e;
+  text-align: center;
+  margin-top: 2rem;
 }
