--- a/src/styles/Pathfinding.css
+++ b/src/styles/Pathfinding.css
@@ -2,8 +2,8 @@
 
 td {
   border: 1px solid #5bc9b1;
-  width: 25px;
-  height: 25px;
+  width: 40px;
+  height: 40px;
   padding: 0;
   border-collapse: collapse;
 }
@@ -38,15 +38,23 @@ table {
 }
 
 .node_start {
-  /* We'll use SVG from assets */
-  background-color: green;
-  border-radius: 12px;
+  background-color: transparent;
+  position: relative;
 }
 
 .node_end {
-  /* We'll use SVG from assets */
-  background-color: red;
-  border-radius: 12px;
+  background-color: transparent;
+  position: relative;
+}
+
+.node-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: 2;
 }
 
 .node_wall {
