--- a/src/styles/Pathfinding.css
+++ b/src/styles/Pathfinding.css
@@ -1,9 +1,9 @@
 /* Pathfinding.css - Styling for the pathfinding visualizer */
 
 td {
-  border: 1px solid #ffffff;
+  border: 1px solid #5bc9b1;
   width: 50px;
-  height: 50px;
+  height: 53px;
   padding: 0;
   border-collapse: collapse;
 }
@@ -18,7 +18,7 @@ tr {
 
 table {
   position: absolute;
-  top: 57%;
+  top: 55%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
@@ -30,7 +30,7 @@ table {
 .pathfinding-container {
   width: 100%;
   height: 100vh;
-  background-color: #1c1d1f;
+  background-color: #100E1A;
   position: relative;
   overflow: hidden;
   display: flex;
@@ -54,13 +54,13 @@ table {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  z-index: 0;
+  z-index: 2;
 }
 
 .node_wall {
   animation: pulse 0.5s 1;
-  background-color: #f6f8f6;
-  border: 1px solid #ffffff;
+  background-color: #f3f5f3;
+  border: 1px solid #a3a5a3;
 }
 
 .node_ {
@@ -72,12 +72,12 @@ table {
     background-color: grey;
   }
   100% {
-    background-color: #202220;
+    background-color: #8a918a;
   }
 }
 
 .node_visited {
-  background-color: rgb(172, 52, 228);
+  background-color: rgba(4, 0, 255, 0.5);
   animation-name: visited;
   animation-duration: 2s;
   animation-iteration-count: 1;
@@ -87,7 +87,7 @@ table {
 @keyframes visited {
   0% {
     transform: scale(0.3);
-    background-color: rgb(248, 159, 226);
+    background-color: rgba(255, 0, 191, 0.5);
     border-radius: 100%;
   }
   50% {
@@ -301,7 +301,7 @@ table {
 }
 
 .modal button {
-  background-color: #622c2a;
+  background-color: #2A623D;
   color: white;
   border: none;
   padding: 8px 16px;
