--- a/src/styles/Pathfinding.css
+++ b/src/styles/Pathfinding.css
@@ -58,9 +58,18 @@ table {
 }
 
 .node_wall {
-  animation: pulse 0.5s 1;
-  background-color: #f3f5f3;
-  border: 1px solid #a3a5a3;
+  background-color: transparent;
+  position: relative;
+}
+
+.wall-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 2;
 }
 
 .node_ {
